--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Aric H.</p>
+                        <p class="team-name">Aric Hood.</p>
                         <p class="subtle">Co-Founder | Creative Director</p>
                     </div>
                     <div class="col-md-3 team-card">
