--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/danielk.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                               <!-- <p>"A great game is made by a team only willing to do great things."</p> -->
+                               <p>"Keep your eyes on the stars, and your feet on the ground." — Theodore Roosevelt"</p>
                                 <hr class="hr-short">
                                 <ul>
                                   <li><a href="https://www.linkedin.com/in/daniel-kitchen-11b64ab0/"><i class="fa fa-linkedin fa-lg"></i></a></li>
@@ -370,7 +370,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/kevinc.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                               <!-- <p>"A great game is made by a team only willing to do great things."</p> -->
+                              <!-- <p>"Keep your eyes on the stars, and your feet on the ground." — Theodore Roosevelt</p> -->
                                 <hr class="hr-short">
                                 <ul>
                                   <li><a href="https://www.linkedin.com/in/kevin-cochran-096b2714a/"><i class="fa fa-linkedin fa-lg"></i></a></li>
@@ -405,7 +405,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/flipsyt.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                               <!-- <p>"A great game is made by a team only willing to do great things."</p> -->
+                               <p>"Just A Noodle Who Likes To Doodle"</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="https://www.linkedin.com/in/lucero-trejo-47652a179/"><i class="fa fa-linkedin fa-lg"></i></a></li>
