--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-6">
                     <!--<img id="support-image" src="images/placeholder.jpg" data-src="images/about.png" class="img-fluid b-lazy" alt="digital collage"> -->
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NU57ytmSqgQ?si=kh2WSmFh6lJm1WnV" title="YouTube video player"  allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NU57ytmSqgQ?si=kh2WSmFh6lJm1WnV" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
