--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                <div class="modal-body">
                                    <h2 class="short-hr-left">TRAVEL TO NEW LANDS</h2>
                                    <p>Hit N' Bit takes place in the wolrd of <span class="colored">Valoris</span>. A magical land, ruled by Old Gods and New. You will travel to new lands throughout the game, exploring the history and magic of the realms.</p>
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/MPJBy_yiy1w?si=URw_XD0SGuqFc1rQ" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
+                                   <iframe display="block" width="560" height="315" src="https://www.youtube.com/embed/MPJBy_yiy1w?si=URw_XD0SGuqFc1rQ" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
                                    <br>
                                    <h2 class="short-hr-left">WELCOME TO CERULIS</h2>
                                    <p><span class="colored">Ceruils</span> is the shining jewel in the sky. A beacon of all things good in the Realm of Illumnia. This is where the story begins with Hit N' Bit. Magic is strong, and the people are nice here.</p>
