--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
                      <div class="col-lg-12 col-xl-7 game-card-right">
                          <h2 class="short-hr-left">TALES OF VALORIS: SWALLOW'S DEFENDERS <br/>- <span class="colored">IN DEVELOPMENT</span></h2>
                          <p class="tags"><span class="subtle">Tower Defense | Mobile </span> </p>
-                         <p class="game-description">Prepare to defend Swallows Keep as mobs of thieves, bandits, and monsters threaten the citizens of our grand city. Players will command a variety of defenders to halt these evildoers in their tracks. Use your arsenal of skilled fighters and mages to creatively defeat your foes and stop the heinous plans of the coalition of mysterious bandit commanders. <span class="expand colored strong" data-toggle="modal" data-target="#game1">Read More</span></p>
+                         <p class="game-description">Prepare to defend Swallows Keep as mobs of thieves, bandits, and monsters threaten the citizens of our grand city. Players will command a variety of defenders to halt these evildoers in their tracks. Use your arsenal of skilled fighters and mages to creatively defeat your foes and stop the heinous plans of the coalition of mysterious bandit commanders. <span class="expand colored strong" data-toggle="modal" data-target="#game2">Read More</span></p>
                      </div>
                      
                      <!-- Modal -->
-                     <div class="modal fade game-modal" id="game1" tabindex="-1" role="dialog" aria-labelledby="scales" aria-hidden="true">
+                     <div class="modal fade game-modal" id="game2" tabindex="-1" role="dialog" aria-labelledby="scales" aria-hidden="true">
                          <div class="modal-dialog modal-lg" role="document">
                              <div class="modal-content">
                                  <div class="modal-header">
-                                     <h1 class="modal-title" id="scales">TALES OF VALORIS: SWALLOW'S DEFENDERS</h1>
+                                     <h1 class="modal-title" id="scales">TALES OF VALORIS</h1>
                                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                          <span aria-hidden="true">&times;</span>
                                      </button>
@@ -224,14 +224,15 @@
                                     <h2 class="short-hr-left">A BLAST TO THE PAST</h2>
                                     <p>Set 50 years in the past within the Hit N’ Bit universe, you will experience a story of victory and loss as you follow along the tale of <span class="colored">Halvesh</span> and his band of heroes, who aim to keep their home safe from invaders.</p>
                                     <!-- TRAILER GOES HERE <iframe display="block" width="560" height="315" src="https://www.youtube.com/embed/MPJBy_yiy1w?si=URw_XD0SGuqFc1rQ" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
+                                    <img class="img-fluid" src="images/MagicGrid.GIF" alt="screenshot">
                                     <br>
                                     <h2 class="short-hr-left">A SERIES OF FUN AND CHALLENGING LEVELS</h2>
                                     <p>Conquer 20 levels that will take you through the land of <span class="colored">Swallows Keep</span> and the surrounding area. Experience the lush landscapes as you trek through dangerous territory to stop the onslaught of enemies in your path.</p>
-                                    <img class="img-fluid" src="images/MagicGrid.GIF" alt="screenshot">
+                                    <img class="img-fluid" src="images/S1.png" alt="screenshot">
                                     <br>
                                     <h2 class="short-hr-left">COMMAND A DIVERSE CAST OF TROOPS</h2>
                                     <p>As a <span class="colored">commander</span> of Swallows Keep, you will have the ability to command five defender types at a time to creatively defeat the thieves and bandits in your way. Earn 6+ different types of Defenders on your journey throughout Valoris and become stronger in your fight against your foes.</p>
-                                    <!--<img class="img-fluid" src="images/Murwell.png" alt="screenshot">-->
+                                    <img class="img-fluid" src="images/S2.png" alt="screenshot">
                                  </div>
                                  <div class="modal-footer">
                                      <button type="button" class="button secondary" data-dismiss="modal">Close</button>
