--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                  <!-- Game Card Video -->
                  <div class="row game-card mobile new">
                      <div class="col-lg-12 col-xl-5 game-card-left">
-                             <img src="images/placeholder.jpg" data-src="images/ToV.png" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
+                             <img src="images/placeholder.jpg" data-src="ToV.png" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
                          </a>
                      </div>
                      <div class="col-lg-12 col-xl-7 game-card-right">
@@ -232,7 +232,7 @@
                                     <br>
                                     <h2 class="short-hr-left">COMMAND A DIVERSE CAST OF TROOPS</h2>
                                     <p>As a <span class="colored">commander</span> of Swallows Keep, you will have the ability to command five defender types at a time to creatively defeat the thieves and bandits in your way. Earn 6+ different types of Defenders on your journey throughout Valoris and become stronger in your fight against your foes.</p>
-                                    <img class="img-fluid" src="images/S2.png" alt="screenshot">
+                                    <img class="img-fluid" src="S2.png" alt="screenshot">
                                  </div>
                                  <div class="modal-footer">
                                      <button type="button" class="button secondary" data-dismiss="modal">Close</button>
