--- a/TOV.html
+++ b/TOV.html
@@ -63,7 +63,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <div class="container">
                 <!-- Site Logo -->
-                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>
+                <a id="logo" class="navbar-brand" href="https://www.digitalscorpioninteractive.com"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>
                 <!-- Dropdown Button -->
                 <button id="hamburger" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -73,23 +73,15 @@
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#games">Games</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#team">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#careers">Careers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="https://blog.digitalscorpioninteractive.com">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://digitalscorpioninteractive.threadless.com/">Merch</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://discord.gg/jtVEun2wSU">Discord</a>
                         </li>
                     </ul>
                 </div>
@@ -148,21 +140,47 @@
                 </div>
                 <!--------------------------------------------------------------------------------------------------------------------------------->
                 <div><h3 class="animation-element slide-down">THE <span class="colored">SCREENSHOTS</span></h3></div>
-                <div id="full-row" class="row text-center">
-                    <div class="col-lg-12 ">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Kevin_Cochran.png" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                    </div> 
+                <div id="full-row" class="row text-center" style="margin-left: auto; margin-right: auto; text-align: center;">
+                    <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                          <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="./images/sc1.jpg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/sc2.jpg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/sc3.jpg" alt="Third slide">
+                          </div>
+                        </div>
+                      </div>
                 </div>
                 <div><h3 class="animation-element slide-down">THE <span class="colored">VIDEOS</span></h3></div>
-                <div id="full-row" class="row text-center">
-                    <div class="col-md-3 team-card">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Kevin_Cochran.png" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                        <p class="team-name">Kevin C.</p>
-                        <p class="subtle">Quality Assurance Lead | QA</p>
+                <div id="full-row" class="row text-center" >
+                    <div class="col-md-3 text-center">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                              <div class="carousel-item embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item d-block w-100"  src="https://www.youtube.com/embed/I8INv55rxvE?si=DQJQOS6BUXoPyfXY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="..." alt="Second slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="..." alt="Third slide">
+                              </div>
+                            </div>
+                          </div>
                     </div> 
                 </div>
                 <!---------------------------------------------------------------------------------------------------------------------------------->
@@ -256,9 +274,9 @@
                      </div>
                 </div><!-- Game Card End -->
                  <!-- Game Card Video -->
-                 <div class="row game-card mobile new">
+               <!--  <div class="row game-card">
                      <div class="col-lg-12 col-xl-5 game-card-left">
-                             <img src="images/placeholder.jpg" data-src="images/TOV.png" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
+                             <img src="images/placeholder.jpg" data-src="images/TOV.png" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img 
                          </a>
                      </div>
                      <div class="col-lg-12 col-xl-7 game-card-right">
@@ -267,7 +285,7 @@
                          <p class="game-description">Prepare to defend Swallows Keep as mobs of thieves, bandits, and monsters threaten the citizens of our grand city. Players will command a variety of defenders to halt these evildoers in their tracks. Use your arsenal of skilled fighters and mages to creatively defeat your foes and stop the heinous plans of the coalition of mysterious bandit commanders. <span class="expand colored strong" data-toggle="modal" data-target="#game2">Read More</span></p>
                      </div>
                      
-                     <!-- Modal -->
+                     
                      <div class="modal fade game-modal" id="game2" tabindex="-1" role="dialog" aria-labelledby="scales" aria-hidden="true">
                          <div class="modal-dialog modal-lg" role="document">
                              <div class="modal-content">
@@ -280,7 +298,7 @@
                                 <div class="modal-body">
                                     <h2 class="short-hr-left">A BLAST TO THE PAST</h2>
                                     <p>Set 50 years in the past within the Hit N’ Bit universe, you will experience a story of victory and loss as you follow along the tale of <span class="colored">Halvesh</span> and his band of heroes, who aim to keep their home safe from invaders.</p>
-                                    <!-- TRAILER GOES HERE <iframe display="block" width="560" height="315" src="https://www.youtube.com/embed/MPJBy_yiy1w?si=URw_XD0SGuqFc1rQ" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
+                                    TRAILER GOES HERE <iframe display="block" width="560" height="315" src="https://www.youtube.com/embed/MPJBy_yiy1w?si=URw_XD0SGuqFc1rQ" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> 
                                     <img class="img-fluid" src="images/MagicGrid.GIF" alt="screenshot">
                                     <br>
                                     <h2 class="short-hr-left">A SERIES OF FUN AND CHALLENGING LEVELS</h2>
@@ -297,7 +315,7 @@
                              </div>
                          </div>
                       </div>
-                 </div><!-- Game Card End -->
+                 </div> -->
             </div>
         </div>
     <!-- Main Container End -->
