lots of changes2

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                      <div class="col-lg-12 col-xl-7 game-card-right">
                          <h2 class="short-hr-left">TALES OF VALORIS: SWALLOW'S DEFENDERS <br/>- <span class="colored">IN DEVELOPMENT</span></h2>
                          <p class="tags"><span class="subtle">Tower Defense | Mobile </span> </p>
-                         <p class="game-description">Prepare to defend Swallows Keep as mobs of thieves, bandits, and monsters threaten the citizens of our grand city. Players will command a variety of defenders to halt these evildoers in their tracks. Use your arsenal of skilled fighters and mages to creatively defeat your foes and stop the heinous plans of the coalition of mysterious bandit commanders. <span class="expand colored strong" data-toggle="modal" data-target="#game2">Read More</span></p>
+                         <p class="game-description">Prepare to defend Swallows Keep as mobs of thieves, bandits, and monsters threaten the citizens of our grand city. Players will command a variety of defenders to halt these evildoers in their tracks. Use your arsenal of skilled fighters and mages to creatively defeat your foes and stop the heinous plans of the coalition of mysterious bandit commanders. <a class="expand colored strong" href="TOV.html">Read More</a></p>
                      </div>
                      
                      <!-- Modal -->
@@ -706,8 +706,7 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:nick@digitalscorpioninteractive.com">info@digitalscorpioninteractive.com</a></span></p></li>
-                                <li><i class="fa fa-globe"></i><p>Website: <span class="colored"><a href="https://www.digitalscorpioninteractive.com" target="_blank">www.digitalscorpioninteractive.com</a></span></p></li>
+                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:digitalscorpioninteractive@gmail.com">info@digitalscorpioninteractive.com</a></span></p></li>
                                 <li><i class="fa fa-map-marker"></i><p>Address: <span class="colored">672 Old Mill Rd #349, Millersville MD 21108</span></p></li>
                             </ul>
                         </div>
