lots of changes

--- a/TOV.html
+++ b/TOV.html
@@ -202,7 +202,7 @@
                 <div class="col-md-12 text-center">
                     <h2 class="short-hr-center">JOIN OUR DISCORD</h2>
                     <p>Stay up to date with the team and our game by joining our Discord Server!</p>
-                    <button class="button"><a href="https://discord.gg/jtVEun2wSU">JOIN HERE</a></button>
+                    <button class="button"><a style="color: #FFF;" href="https://discord.gg/jtVEun2wSU">JOIN HERE</a></button>
                 </div>
             </div>
         </div>
