fix marketing PLS

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 <div id="full-row" class="row text-center align-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="./Images/test.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/test.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Chloe L.</p>
                         <p class="subtle">Marketing Lead</p>
