--- a/index.html
+++ b/index.html
@@ -585,10 +585,10 @@
                 <div id="full-row" class="row text-center align-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/test.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Roxann_McLane.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
-                        <p class="team-name">Chloe L.</p>
-                        <p class="subtle">Marketing Lead</p>
+                        <p class="team-name">Roxann M.</p>
+                        <p class="subtle">Community Manager | Socia
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
