--- a/index.html
+++ b/index.html
@@ -587,9 +587,9 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/test.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
-                        <p class="team-name">Roxann M.</p>
-                        <p class="subtle">Community Manager | Socia
-                    </div> 
+                        <p class="team-name">Chloe L.</p>
+                        <p class="subtle">Marketing Lead </p>
+                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/Roxann_McLane.png" class="img-fluid b-lazy" alt="teammember">
