--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Joel_Miller.png" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/JoelM.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Joel M.</p>
                         <p class="subtle">Co-Founder | Chief Technical Officer</p>
