--- a/index.html
+++ b/index.html
@@ -562,6 +562,13 @@
                             <p class="team-name">Alexis T.</p>
                             <p class="subtle">Sound Designer</p>
                         </div>
+                        <div class="col-md-3 team-card">
+                            <figure>
+                                <img src="images/placeholder.jpg" data-src="images/JaeS.jpg" class="img-fluid b-lazy" alt="teammember">
+                            </figure>
+                            <p class="team-name">Jae S.</p>
+                            <p class="subtle">Sound Designer</p>
+                        </div>
                        <div class="col-md-3 team-card">
                             <figure>
                                 <img src="images/placeholder.jpg" data-src="images/JaeS.jpg" class="img-fluid b-lazy" alt="teammember">
