--- a/index.html
+++ b/index.html
@@ -564,14 +564,7 @@
                         </div>
                         <div class="col-md-3 team-card">
                             <figure>
-                                <img src="images/placeholder.jpg" data-src="images/JaeS.jpg" class="img-fluid b-lazy" alt="teammember">
-                            </figure>
-                            <p class="team-name">Jae S.</p>
-                            <p class="subtle">Sound Designer</p>
-                        </div>
-                       <div class="col-md-3 team-card">
-                            <figure>
-                                <img src="images/placeholder.jpg" data-src="images/JaeS.jpg" class="img-fluid b-lazy" alt="teammember">
+                                <img src="images/placeholder.jpg" data-src="images/test2.JPG" class="img-fluid b-lazy" alt="teammember">
                             </figure>
                             <p class="team-name">Jae S.</p>
                             <p class="subtle">Sound Designer</p>
