--- a/index.html
+++ b/index.html
@@ -599,6 +599,13 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
+                            <img src="images/placeholder.jpg" data-src="images/fruitypebbles.png" class="img-fluid b-lazy" alt="teammember">
+                        </figure>
+                        <p class="team-name">Pebbles K.</p>
+                        <p class="subtle">Community Manager | Press Relations</p>
+                    </div> 
+                    <div class="col-md-3 team-card">
+                        <figure>
                             <img src="images/placeholder.jpg" data-src="images/Zachary_LaFever.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Zachary L.</p>
