--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2 class="short-hr-center">JOB OPENINGS</h2>
-                    <p>Are you a talented and motivated individual? Then we would love to have you in our team. We try to keep our job postings up to date, keep checking back here for new openings! All job ostings are currently <span class="colored">Internships</span>. Paid postitions will be available in the future.</p><br>
+                    <p>Are you a talented and motivated individual? Then we would love to have you in our team. We try to keep our job postings up to date, keep checking back here for new openings! All job postings are currently <span class="colored">Internships</span>. Paid postitions will be available in the future.</p><br>
                     <button class="button"><a style="color: #FFF;" href="https://digital-scorpion-interactive.breezy.hr/">View Current Openings</a></button>
                 </div>
             </div>
@@ -710,6 +710,7 @@
                             <li><a href="https://twitter.com/digi_scorp"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/digi-scorp"><i class="fa fa-linkedin fa-lg icon-social"></i></a>
                             <li><a href="https://www.instagram.com/digital_scorpion_interactive/"><i class="fa fa-instagram fa-lg icon-social"></i></a>
+                                <li><a href="https://www.digitalscorpioninteractive.com/privacy">Privacy Policy</a>
                         </ul>
                     </div>
                 </div>
