fixed privacy policy

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                             <li><a href="https://twitter.com/digi_scorp"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/digi-scorp"><i class="fa fa-linkedin fa-lg icon-social"></i></a>
                             <li><a href="https://www.instagram.com/digital_scorpion_interactive/"><i class="fa fa-instagram fa-lg icon-social"></i></a>
-                                <li><a href="https://www.digitalscorpioninteractive.com/privacy">Privacy Policy</a>
+                            <li><a href="privacy.html">Privacy Policy</a>
                         </ul>
                     </div>
                 </div>
