--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <img src="images/placeholder.jpg" data-src="images/JerryV.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Jerry V.</p>
-                        <p class="subtle">Co-founder | Chief Production Officerr</p>
+                        <p class="subtle">Co-founder | Chief Production Officer</p>
                     </div>
                 </div>
                 <!-----------------------------------------------------DEVELOPMENT--------------------------------------------------------->
