--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/jake.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Jake.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Jake K.</p>
                         <p class="subtle">Content Writing | Marketing</p>
