--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Noah.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/NoahT.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Noah T.</p>
                         <p class="subtle">Audio Lead </p>
