--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Stel.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Stel.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Stel B.</p>
                         <p class="subtle">2D Artist</p>
@@ -587,21 +587,21 @@
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Jake.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Jake.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Jake K.</p>
                         <p class="subtle">Content Writing | Marketing</p>
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Eris.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Eris.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Eris G.</p>
                         <p class="subtle">Content Artist | Marketing</p>
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Tia.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Tia.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Tia L.</p>
                         <p class="subtle">Dedicated Streamer | Marketing</p>
