Added/removed team members

--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/SylinaA.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/TylerC.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
-                        <p class="team-name">Sylina A.</p>
+                        <p class="team-name">Tyler C.</p>
                         <p class="subtle">2D Art Lead</p>
                     </div>
                     <div class="col-md-3 team-card">
@@ -413,20 +413,6 @@
                             <img src="images/placeholder.jpg" data-src="images/Flipsy_Lucero.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Flipsy T.</p>
-                        <p class="subtle">2D Artist</p>
-                    </div>
-                    <div class="col-md-3 team-card">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Stel.JPG" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                        <p class="team-name">Stel B.</p>
-                        <p class="subtle">2D Artist</p>
-                    </div>
-                    <div class="col-md-3 team-card">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/TylerC.png" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                        <p class="team-name">Tyler C.</p>
                         <p class="subtle">2D Artist</p>
                     </div>
                     <div class="col-md-3 team-card">
@@ -456,6 +442,13 @@
                             <img src="images/placeholder.jpg" data-src="images/PaigeA.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Page A.</p>
+                        <p class="subtle">3D Artist</p>
+                    </div>
+                    <div class="col-md-3 team-card">
+                        <figure>
+                            <img src="images/placeholder.jpg" data-src="images/frannie.png" class="img-fluid b-lazy" alt="teammember">
+                        </figure>
+                        <p class="team-name">Frannie M.</p>
                         <p class="subtle">3D Artist</p>
                     </div>
                 </div>
