Removed two team members
rose g, tia l

--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@
                         <p class="team-name">Adrian G.</p>
                         <p class="subtle">2D Artist</p>
                     </div>
-                    <div class="col-md-3 team-card">
+                    <!--<div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/RoseG.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Rose G.</p>
                         <p class="subtle">2D Technical Artist</p>
-                    </div>
+                    </div> -->
                     <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/PaigeA.png" class="img-fluid b-lazy" alt="teammember">
@@ -612,13 +612,13 @@
                         <p class="team-name">Eris G.</p>
                         <p class="subtle">Content Artist | Marketing</p>
                     </div> 
-                    <div class="col-md-3 team-card">
+                    <!-- <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/Tia.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Tia L.</p>
                         <p class="subtle">Dedicated Streamer | Marketing</p>
-                    </div> 
+                    </div> -->
                 </div>
                 
                 <!-----------------------------------------------------------QA---------------------------------------------------------------------->
