--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <img src="images/placeholder.jpg" data-src="images/Daniel_Kitchen.png" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Daniel K.</p>
-                        <p class="subtle">Level Designer</p>
+                        <p class="subtle">Level Design Lead</p>
                     </div><div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/Daniel_Woodell.png" class="img-fluid b-lazy" alt="teammember">
