updated headshot, removed adrian

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/NickR.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/NickR.JPG" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Nick R.</p>
                         <p class="subtle">Co-Founder | Chief Executive Officer</p>
@@ -434,14 +434,6 @@
                         </figure>
                         <p class="team-name">Megan F.</p>
                         <p class="subtle">3D Artist</p>
-                    </div>
-
-                    <div class="col-md-3 team-card">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/adrianG.png" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                        <p class="team-name">Adrian G.</p>
-                        <p class="subtle">2D Artist</p>
                     </div>
                     <!--<div class="col-md-3 team-card">
                         <figure>
