--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/NickR.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/NickR.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Nick R.</p>
                         <p class="subtle">Co-Founder | Chief Executive Officer</p>
