--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Nick_McKinnis.png" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/NickM.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Nick M.</p>
                         <p class="subtle">Co-Founder | Chief Design Officer</p>
