Changed the About

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="small-margin"> Digital Scorpion Interactive is an Indie Game Development Studio founded in 2021 by Nicholas Revell. He had a vision to change the way games are built and prove to the gaming world they are a force to be reckoned with. DSI was founded on the principles of <span class="colored">Ingenuity</span>,<span class="colored"> Integrity</span>, and <span class="colored"> Innovation</span>. They strive to break the boundaries of modern gaming and bring to life an immersive experience gamers will keep coming back for.</p>
+                    <p class="small-margin"> We are Digital Scorpion Interactive, an Indie Game Development Studio founded in 2021 by Nick Revell. His vision is to change how games are built and prove to the gaming world that we are a positive force for our industry while making great games. DSI was founded on the principles of <span class="colored">Ingenuity</span>,<span class="colored"> Integrity</span>, and <span class="colored"> Innovation</span>. We strive to break the boundaries of modern gaming and bring to life an immersive experience that gamers will buzz about and thoroughly enjoy the journey. </p>
                     <!--<p>DSI is currently developing its premier game <span class="colored">Tales of Valoris: Swallow's Defenders</span>, a Tower Defense. It currently does not have a set release date, but keep checking back for more updates!</p>-->
                 </div>
                 <div class="col-md-6">
