--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <!-- Game Card Video -->
                 <div class="row game-card pc new">
                     <div class="col-lg-12 col-xl-5 game-card-left">
-                            <img src="images/placeholder.jpg" data-src="images/game.jpg" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
+                            <img src="images/placeholder.jpg" data-src="images/HnB.PNG" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
                         </a>
                     </div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
@@ -449,6 +449,13 @@
                         <p class="team-name">Frannie M.</p>
                         <p class="subtle">3D Artist</p>
                     </div>
+                    <!--<div class="col-md-3 team-card">
+                        <figure>
+                            <img src="images/placeholder.jpg" data-src="images/JoeB.JPG" class="img-fluid b-lazy" alt="teammember">
+                        </figure>
+                        <p class="team-name">Joe B.</p>
+                        <p class="subtle">3D Artist</p>
+                    </div> -->
                 </div>
 
                 
@@ -518,7 +525,7 @@
                             <img src="images/placeholder.jpg" data-src="images/TravisM.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Travis M.</p>
-                        <p class="subtle">Techinical Audio </p>
+                        <p class="subtle">Techinical Sound Designer </p>
                     </div>
                     <!--<div class="col-md-3 team-card">
                         <figure>
@@ -548,13 +555,6 @@
                             <p class="team-name">Alexis T.</p>
                             <p class="subtle">Sound Designer</p>
                         </div>
-                        <div class="col-md-3 team-card">
-                            <figure>
-                                <img src="images/placeholder.jpg" data-src="images/test2.JPG" class="img-fluid b-lazy" alt="teammember">
-                            </figure>
-                            <p class="team-name">Jae S.</p>
-                            <p class="subtle">Sound Designer</p>
-                        </div>
                      <!--    <div class="col-md-3 team-card">
                             <figure>
                                 <img src="images/placeholder.jpg" data-src="images/Michael_Spicer.png" class="img-fluid b-lazy" alt="teammember">
@@ -569,13 +569,6 @@
                 
                 <div><h3 class="animation-element slide-down">THE <span class="colored">MARKETING TEAM</span></h3></div>
                 <div id="full-row" class="row text-center align-center">
-                    <div class="col-md-3 team-card">
-                        <figure>
-                            <img src="images/placeholder.jpg" data-src="images/samnye.JPG" class="img-fluid b-lazy" alt="teammember">
-                        </figure>
-                        <p class="team-name">Samantha N.</p>
-                        <p class="subtle">Marketing Lead, Community Manager</p>
-                    </div> 
                     <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/Zachary_LaFever.png" class="img-fluid b-lazy" alt="teammember">
