--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <!-- Game Card Video -->
                 <div class="row game-card pc new">
                     <div class="col-lg-12 col-xl-5 game-card-left">
-                            <img src="images/placeholder.jpg" data-src="images/HnB.PNG" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
+                            <img src="images/placeholder.jpg" data-src="images/HnB.png" class="img-fluid b-lazy" alt="image thumbnail"> <!-- Video Thumbnail Img -->
                         </a>
                     </div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
