--- a/index.html
+++ b/index.html
@@ -347,14 +347,14 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Ellie_M.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Ellie_M.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Ellie M.</p>
                         <p class="subtle">Unity Developer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Clara_N.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Clara_N.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Clara N.</p>
                         <p class="subtle">Unity Developer</p>
@@ -430,7 +430,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Tessa_L.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Tessa_L.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Tessa L.</p>
                         <p class="subtle">2D Artist</p>
@@ -469,7 +469,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/JoeB.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/JoeB.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Joe B.</p>
                         <p class="subtle">3D Artist</p>
@@ -589,14 +589,14 @@
                 <div id="full-row" class="row text-center align-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Conor_R.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Conor_R.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Conor R.</p>
                         <p class="subtle">Community Manager</p>
                     </div> 
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/Armando_F.JPG" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Armando_F.jpg" class="img-fluid b-lazy" alt="teammember">
                         </figure>
                         <p class="team-name">Armando F.</p>
                         <p class="subtle">Community Manager</p>
